--- a/templates/chat_bot.html
+++ b/templates/chat_bot.html
@@ -19,7 +19,7 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br>
-      <h1 class="header center white-text">Anti-Depressant Chatbot</h1>
+      <h1 class="header center black-text">Anti-Depressant Chatbot</h1>
       <div class="row center">
         <h5 class="header col s12 light">{{type}}
         <br>
